--- a/start.ipynb
+++ b/start.ipynb
@@ -201,7 +201,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
+   "id": "e4c6d797-1f59-46aa-8c49-83fbe38343a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre d'id_bank_account uniques dans la base account : 31436\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre_uniques = acc['id_bank_account'].nunique()\n",
+    "print(\"Nombre d'id_bank_account uniques dans la base account :\", nombre_uniques)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6dd77d76-cbc2-4f40-b49c-36434465de30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre d'id_bank_account uniques dans la base transactions  : 16051\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre_uniques = trans['id_bank_account'].nunique()\n",
+    "print(\"Nombre d'id_bank_account uniques dans la base transactions  :\", nombre_uniques)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46bfdf3a-6c24-463c-a8b3-bc52f88281da",
+   "metadata": {},
+   "source": [
+    "Nous observons que, dans la base de données des comptes, il y a **31,436** id_bank_account uniques, tandis que dans la base de données des transactions, nous trouvons uniquement **16,051** id_bank_account distincts. Cela indique que certains comptes dans notre base de données n'ont pas de transactions associées. Par conséquent, nous prendrons en compte uniquement ces **16,051** transactions pour nos analyses futures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "2813f8f2-2254-4b83-9a2a-002e1129f32c",
    "metadata": {},
    "outputs": [
@@ -249,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns"
+    "import seaborn as sns\n"
    ]
   },
   {
