--- a/start.ipynb
+++ b/start.ipynb
@@ -2250,30 +2250,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "id": "245b13ab-2ad7-46db-b76c-2c379b1a83da",
    "metadata": {},
    "outputs": [
     {
-     "ename": "MergeError",
-     "evalue": "Not allowed to merge between different levels. (1 levels on the left, 2 on the right)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMergeError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[81], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m pivot_table \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mpivot_table(copy_trans_sorted, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid_bank_account\u001b[39m\u001b[38;5;124m'\u001b[39m, columns\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcategory_l1\u001b[39m\u001b[38;5;124m'\u001b[39m, aggfunc\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[38;5;241m1\u001b[39m, fill_value\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\u001b[38;5;241m.\u001b[39mreset_index()\n\u001b[0;32m----> 3\u001b[0m With_categories \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmerged_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpivot_table\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mon\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mid_bank_account\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mright\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(With_categories)\n",
-      "File \u001b[0;32m/opt/mamba/lib/python3.11/site-packages/pandas/core/reshape/merge.py:170\u001b[0m, in \u001b[0;36mmerge\u001b[0;34m(left, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\u001b[0m\n\u001b[1;32m    155\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _cross_merge(\n\u001b[1;32m    156\u001b[0m         left_df,\n\u001b[1;32m    157\u001b[0m         right_df,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    167\u001b[0m         copy\u001b[38;5;241m=\u001b[39mcopy,\n\u001b[1;32m    168\u001b[0m     )\n\u001b[1;32m    169\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 170\u001b[0m     op \u001b[38;5;241m=\u001b[39m \u001b[43m_MergeOperation\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    171\u001b[0m \u001b[43m        \u001b[49m\u001b[43mleft_df\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    172\u001b[0m \u001b[43m        \u001b[49m\u001b[43mright_df\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    173\u001b[0m \u001b[43m        \u001b[49m\u001b[43mhow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mhow\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    174\u001b[0m \u001b[43m        \u001b[49m\u001b[43mon\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mon\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    175\u001b[0m \u001b[43m        \u001b[49m\u001b[43mleft_on\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mleft_on\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    176\u001b[0m \u001b[43m        \u001b[49m\u001b[43mright_on\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mright_on\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    177\u001b[0m \u001b[43m        \u001b[49m\u001b[43mleft_index\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mleft_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    178\u001b[0m \u001b[43m        \u001b[49m\u001b[43mright_index\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mright_index\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    179\u001b[0m \u001b[43m        \u001b[49m\u001b[43msort\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msort\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    180\u001b[0m \u001b[43m        \u001b[49m\u001b[43msuffixes\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msuffixes\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    181\u001b[0m \u001b[43m        \u001b[49m\u001b[43mindicator\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mindicator\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    182\u001b[0m \u001b[43m        \u001b[49m\u001b[43mvalidate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mvalidate\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    183\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    184\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m op\u001b[38;5;241m.\u001b[39mget_result(copy\u001b[38;5;241m=\u001b[39mcopy)\n",
-      "File \u001b[0;32m/opt/mamba/lib/python3.11/site-packages/pandas/core/reshape/merge.py:784\u001b[0m, in \u001b[0;36m_MergeOperation.__init__\u001b[0;34m(self, left, right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, indicator, validate)\u001b[0m\n\u001b[1;32m    778\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _left\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m!=\u001b[39m _right\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels:\n\u001b[1;32m    779\u001b[0m     msg \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m    780\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot allowed to merge between different levels. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    781\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m_left\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m levels on the left, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    782\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m_right\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m on the right)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    783\u001b[0m     )\n\u001b[0;32m--> 784\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m MergeError(msg)\n\u001b[1;32m    786\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mleft_on, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mright_on \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_left_right_on(left_on, right_on)\n\u001b[1;32m    788\u001b[0m (\n\u001b[1;32m    789\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mleft_join_keys,\n\u001b[1;32m    790\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mright_join_keys,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    793\u001b[0m     right_drop,\n\u001b[1;32m    794\u001b[0m ) \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_merge_keys()\n",
-      "\u001b[0;31mMergeError\u001b[0m: Not allowed to merge between different levels. (1 levels on the left, 2 on the right)"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_bank_account</th>\n",
+       "      <th>max_date</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>balance_normalized</th>\n",
+       "      <th>total_transaction_amount</th>\n",
+       "      <th>Solde</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1777</td>\n",
+       "      <td>2023-10-11 22:00:00</td>\n",
+       "      <td>-15.24</td>\n",
+       "      <td>-0.026891</td>\n",
+       "      <td>24343.13</td>\n",
+       "      <td>24327.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1778</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>-443.17</td>\n",
+       "      <td>-0.032660</td>\n",
+       "      <td>18915.96</td>\n",
+       "      <td>18472.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1780</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>2925.13</td>\n",
+       "      <td>0.012753</td>\n",
+       "      <td>19909.30</td>\n",
+       "      <td>22834.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1781</td>\n",
+       "      <td>2023-07-16 22:00:00</td>\n",
+       "      <td>53.28</td>\n",
+       "      <td>-0.025967</td>\n",
+       "      <td>7622.05</td>\n",
+       "      <td>7675.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1785</td>\n",
+       "      <td>2024-02-20 23:00:00</td>\n",
+       "      <td>118.67</td>\n",
+       "      <td>-0.025085</td>\n",
+       "      <td>3645.85</td>\n",
+       "      <td>3764.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10572</th>\n",
+       "      <td>69919</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>712.06</td>\n",
+       "      <td>-0.017085</td>\n",
+       "      <td>698.50</td>\n",
+       "      <td>1410.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10573</th>\n",
+       "      <td>69920</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>-52.72</td>\n",
+       "      <td>-0.027396</td>\n",
+       "      <td>185.35</td>\n",
+       "      <td>132.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10574</th>\n",
+       "      <td>69921</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>636.33</td>\n",
+       "      <td>-0.018106</td>\n",
+       "      <td>-5279.85</td>\n",
+       "      <td>-4643.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10575</th>\n",
+       "      <td>69922</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>-169.88</td>\n",
+       "      <td>-0.028976</td>\n",
+       "      <td>643.99</td>\n",
+       "      <td>474.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10576</th>\n",
+       "      <td>69923</td>\n",
+       "      <td>2023-12-25 23:00:00</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>-0.026683</td>\n",
+       "      <td>-1084.27</td>\n",
+       "      <td>-1084.11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10577 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id_bank_account             max_date  balance  balance_normalized  \\\n",
+       "0                 1777  2023-10-11 22:00:00   -15.24           -0.026891   \n",
+       "1                 1778  2024-03-03 23:00:00  -443.17           -0.032660   \n",
+       "2                 1780  2024-03-03 23:00:00  2925.13            0.012753   \n",
+       "3                 1781  2023-07-16 22:00:00    53.28           -0.025967   \n",
+       "4                 1785  2024-02-20 23:00:00   118.67           -0.025085   \n",
+       "...                ...                  ...      ...                 ...   \n",
+       "10572            69919  2024-03-03 23:00:00   712.06           -0.017085   \n",
+       "10573            69920  2024-03-03 23:00:00   -52.72           -0.027396   \n",
+       "10574            69921  2024-03-03 23:00:00   636.33           -0.018106   \n",
+       "10575            69922  2024-03-03 23:00:00  -169.88           -0.028976   \n",
+       "10576            69923  2023-12-25 23:00:00     0.16           -0.026683   \n",
+       "\n",
+       "       total_transaction_amount     Solde  \n",
+       "0                      24343.13  24327.89  \n",
+       "1                      18915.96  18472.79  \n",
+       "2                      19909.30  22834.43  \n",
+       "3                       7622.05   7675.33  \n",
+       "4                       3645.85   3764.52  \n",
+       "...                         ...       ...  \n",
+       "10572                    698.50   1410.56  \n",
+       "10573                    185.35    132.63  \n",
+       "10574                  -5279.85  -4643.52  \n",
+       "10575                    643.99    474.11  \n",
+       "10576                  -1084.27  -1084.11  \n",
+       "\n",
+       "[10577 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pivot_table = pd.pivot_table(copy_trans_sorted, index='id_bank_account', columns='category_l1', aggfunc=lambda x: 1, fill_value=0).reset_index()\n",
-    "\n",
-    "With_categories = pd.merge(merged_df, pivot_table, on='id_bank_account', how='right')\n",
-    "\n",
-    "print(With_categories)\n"
+    "merged_df"
    ]
   },
   {
