--- a/start.ipynb
+++ b/start.ipynb
@@ -2694,7 +2694,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 135,
+   "id": "a2cf0fb9-a9d8-4cf6-a929-1e6dae9ede94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df.drop(columns=['refound'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "id": "8c779608-f37e-4d16-b026-c794b17b94c5",
    "metadata": {},
    "outputs": [
@@ -2725,7 +2735,7 @@
        "      <th>balance_normalized</th>\n",
        "      <th>total_transaction_amount</th>\n",
        "      <th>Solde</th>\n",
-       "      <th>refound</th>\n",
+       "      <th>fraud</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2858,51 +2868,54 @@
        "10575            69922  2024-03-03 23:00:00  -169.88           -0.028976   \n",
        "10576            69923  2023-12-25 23:00:00     0.16           -0.026683   \n",
        "\n",
-       "       total_transaction_amount     Solde  refound  \n",
-       "0                      24343.13  24327.89        0  \n",
-       "1                      18915.96  18472.79        0  \n",
-       "2                      19909.30  22834.43        1  \n",
-       "3                       7622.05   7675.33        0  \n",
-       "4                       3645.85   3764.52        0  \n",
-       "...                         ...       ...      ...  \n",
-       "10572                    698.50   1410.56        0  \n",
-       "10573                    185.35    132.63        0  \n",
-       "10574                  -5279.85  -4643.52        0  \n",
-       "10575                    643.99    474.11        0  \n",
-       "10576                  -1084.27  -1084.11        0  \n",
+       "       total_transaction_amount     Solde  fraud  \n",
+       "0                      24343.13  24327.89      0  \n",
+       "1                      18915.96  18472.79      0  \n",
+       "2                      19909.30  22834.43      1  \n",
+       "3                       7622.05   7675.33      0  \n",
+       "4                       3645.85   3764.52      0  \n",
+       "...                         ...       ...    ...  \n",
+       "10572                    698.50   1410.56      0  \n",
+       "10573                    185.35    132.63      0  \n",
+       "10574                  -5279.85  -4643.52      0  \n",
+       "10575                    643.99    474.11      0  \n",
+       "10576                  -1084.27  -1084.11      0  \n",
        "\n",
        "[10577 rows x 7 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df['refound'] = merged_df['id_bank_account'].isin(liste_refound).astype(int)\n",
+    "merged_df['fraud'] = merged_df['id_bank_account'].isin(liste_refound).astype(int)\n",
     "merged_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 138,
    "id": "0a675904-31ff-42b9-8c4e-ddeb8bc631b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1])"
+       "fraud\n",
+       "0    9764\n",
+       "1     813\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df[\"refound\"].unique()"
+    "merged_df[\"fraud\"].value_counts()"
    ]
   },
   {
