--- a/CLEAN.ipynb
+++ b/CLEAN.ipynb
@@ -1244,21 +1244,45 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "03917b2f-3c15-4567-838f-163fe5b7e216",
-   "metadata": {},
-   "source": [
-    "months_per_account"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "id": "2be049bc-5a24-434a-bf76-6bd1c72dddb4",
    "metadata": {},
    "outputs": [],
    "source": [
     "f=months_per_account['id_bank_account'][months_per_account['unique_months_count']>=15]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "cb85fc56-0be3-4c41-bac2-bdb8e92155be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         1777\n",
+       "1         1778\n",
+       "2         1780\n",
+       "4         1785\n",
+       "5         1789\n",
+       "         ...  \n",
+       "9800     68300\n",
+       "9869     68516\n",
+       "9945     68868\n",
+       "9970     68977\n",
+       "10040    69164\n",
+       "Name: id_bank_account, Length: 2640, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
    ]
   },
   {
@@ -1333,8 +1357,518 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "1f57e146-1fd7-4c7c-b862-2095b53772c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_bank_account</th>\n",
+       "      <th>max_date</th>\n",
+       "      <th>balance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1777</td>\n",
+       "      <td>2023-10-11 22:00:00</td>\n",
+       "      <td>-15.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1778</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>-443.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1780</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>2925.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1785</td>\n",
+       "      <td>2024-02-20 23:00:00</td>\n",
+       "      <td>118.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1789</td>\n",
+       "      <td>2021-11-07 23:00:00</td>\n",
+       "      <td>257.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30247</th>\n",
+       "      <td>68300</td>\n",
+       "      <td>2024-03-01 23:00:00</td>\n",
+       "      <td>35.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30412</th>\n",
+       "      <td>68516</td>\n",
+       "      <td>2024-02-18 23:00:00</td>\n",
+       "      <td>728.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30661</th>\n",
+       "      <td>68868</td>\n",
+       "      <td>2024-03-01 23:00:00</td>\n",
+       "      <td>123.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30744</th>\n",
+       "      <td>68977</td>\n",
+       "      <td>2024-02-04 23:00:00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30896</th>\n",
+       "      <td>69164</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>100.22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2640 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id_bank_account             max_date  balance\n",
+       "0                 1777  2023-10-11 22:00:00   -15.24\n",
+       "1                 1778  2024-03-03 23:00:00  -443.17\n",
+       "2                 1780  2024-03-03 23:00:00  2925.13\n",
+       "4                 1785  2024-02-20 23:00:00   118.67\n",
+       "5                 1789  2021-11-07 23:00:00   257.11\n",
+       "...                ...                  ...      ...\n",
+       "30247            68300  2024-03-01 23:00:00    35.50\n",
+       "30412            68516  2024-02-18 23:00:00   728.01\n",
+       "30661            68868  2024-03-01 23:00:00   123.57\n",
+       "30744            68977  2024-02-04 23:00:00     0.00\n",
+       "30896            69164  2024-03-03 23:00:00   100.22\n",
+       "\n",
+       "[2640 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "account_15_M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "cf0d1d50-a600-46d7-97b7-26b6da0d2939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=transaction_15_M[transaction_15_M[\"category_l2\"]==\"rejectionFees\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "030c0bb6-fe88-4f6e-a971-6a2d8199dbba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_bank_account</th>\n",
+       "      <th>date</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>category_l1</th>\n",
+       "      <th>category_l2</th>\n",
+       "      <th>year_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1271675</th>\n",
+       "      <td>1780</td>\n",
+       "      <td>2023-10-13 22:00:00</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2023-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>291220</th>\n",
+       "      <td>1780</td>\n",
+       "      <td>2021-02-12 23:00:00</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2021-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1489262</th>\n",
+       "      <td>1799</td>\n",
+       "      <td>2022-06-06 22:00:00</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2022-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3415312</th>\n",
+       "      <td>1873</td>\n",
+       "      <td>2022-03-07 23:00:00</td>\n",
+       "      <td>-25.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2022-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>375076</th>\n",
+       "      <td>1873</td>\n",
+       "      <td>2022-04-04 22:00:00</td>\n",
+       "      <td>-23.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2022-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1979536</th>\n",
+       "      <td>68977</td>\n",
+       "      <td>2023-01-13 23:00:00</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2023-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1161627</th>\n",
+       "      <td>68977</td>\n",
+       "      <td>2023-04-13 22:00:00</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2023-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1620031</th>\n",
+       "      <td>68977</td>\n",
+       "      <td>2023-06-13 22:00:00</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2023-06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1109814</th>\n",
+       "      <td>68977</td>\n",
+       "      <td>2023-10-13 22:00:00</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2023-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2872575</th>\n",
+       "      <td>68977</td>\n",
+       "      <td>2023-02-13 23:00:00</td>\n",
+       "      <td>-20.0</td>\n",
+       "      <td>overdraft</td>\n",
+       "      <td>rejectionFees</td>\n",
+       "      <td>2023-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2109 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id_bank_account                date  amount category_l1  \\\n",
+       "1271675             1780 2023-10-13 22:00:00   -20.0   overdraft   \n",
+       "291220              1780 2021-02-12 23:00:00   -20.0   overdraft   \n",
+       "1489262             1799 2022-06-06 22:00:00    -8.0   overdraft   \n",
+       "3415312             1873 2022-03-07 23:00:00   -25.0   overdraft   \n",
+       "375076              1873 2022-04-04 22:00:00   -23.0   overdraft   \n",
+       "...                  ...                 ...     ...         ...   \n",
+       "1979536            68977 2023-01-13 23:00:00   -20.0   overdraft   \n",
+       "1161627            68977 2023-04-13 22:00:00   -20.0   overdraft   \n",
+       "1620031            68977 2023-06-13 22:00:00   -20.0   overdraft   \n",
+       "1109814            68977 2023-10-13 22:00:00    -5.0   overdraft   \n",
+       "2872575            68977 2023-02-13 23:00:00   -20.0   overdraft   \n",
+       "\n",
+       "           category_l2 year_month  \n",
+       "1271675  rejectionFees    2023-10  \n",
+       "291220   rejectionFees    2021-02  \n",
+       "1489262  rejectionFees    2022-06  \n",
+       "3415312  rejectionFees    2022-03  \n",
+       "375076   rejectionFees    2022-04  \n",
+       "...                ...        ...  \n",
+       "1979536  rejectionFees    2023-01  \n",
+       "1161627  rejectionFees    2023-04  \n",
+       "1620031  rejectionFees    2023-06  \n",
+       "1109814  rejectionFees    2023-10  \n",
+       "2872575  rejectionFees    2023-02  \n",
+       "\n",
+       "[2109 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "86234858-046d-4f08-82df-77416e5d031b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = a.groupby('id_bank_account')['category_l2'].size().reset_index(name='nbre_Rejection')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "63f4a2c2-1511-44b5-a000-426445390d30",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_bank_account</th>\n",
+       "      <th>nbre_Rejection</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1780</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1799</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1873</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1877</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1900</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>49865</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>50847</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>63403</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>66417</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>68977</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>173 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     id_bank_account  nbre_Rejection\n",
+       "0               1780               2\n",
+       "1               1799               1\n",
+       "2               1873               4\n",
+       "3               1877              15\n",
+       "4               1900              14\n",
+       "..               ...             ...\n",
+       "168            49865               5\n",
+       "169            50847               1\n",
+       "170            63403               5\n",
+       "171            66417               1\n",
+       "172            68977              30\n",
+       "\n",
+       "[173 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "0e2941cd-6533-49a6-b305-6d2ab4f85da1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=b['id_bank_account'][b['nbre_Rejection']>=3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "c01009a5-ff48-4c88-96ea-2339b58037fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2       1873\n",
+       "3       1877\n",
+       "4       1900\n",
+       "5       1934\n",
+       "6       1948\n",
+       "       ...  \n",
+       "165    47481\n",
+       "167    49294\n",
+       "168    49865\n",
+       "170    63403\n",
+       "172    68977\n",
+       "Name: id_bank_account, Length: 101, dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "64ad7960-b0d3-4baf-8a50-b19d5e60011f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.788999525841631"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(101/2109)*100\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "643def03-696d-4997-99b8-8608d9d86922",
+   "id": "5975b572-1880-417c-b984-cc63071d44a0",
    "metadata": {},
    "outputs": [],
    "source": []
