--- a/CLEAN.ipynb
+++ b/CLEAN.ipynb
@@ -2180,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 120,
    "id": "8702f9c7-4c35-45be-82a5-169ea9c24502",
    "metadata": {},
    "outputs": [
@@ -2348,7 +2348,234 @@
        "[118 rows x 6 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "account_segmentées[account_segmentées[\"defaut\"]==1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b78c4307-64ec-496e-a6e7-557f7a1868b4",
+   "metadata": {},
+   "source": [
+    "### Montant total sur les 3 mois."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "26bac5da-2435-4e9f-943f-5daa0bbe24dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Mont_tot_3M(id_bank): \n",
+    "    \n",
+    "    Transaction_id = transactions_segmentées[transactions_segmentées['new_id'] == id_bank]\n",
+    "    \n",
+    "    date_max = Transaction_id[\"date\"].max()\n",
+    "    \n",
+    "    D = Transaction_id[( date_max - Transaction_id[\"date\"] <= datetime.timedelta(days=90))]\n",
+    "    somme = D['amount'].sum()\n",
+    "    return (somme)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "cf33c371-802b-4b8d-887a-3baff7216b93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "account_segmentées.loc[:, 'Mont_tot_sur_3M'] = account_segmentées['new_id'].apply(Mont_tot_3M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "09649940-4b39-4c96-b660-4c1502724a92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>new_id</th>\n",
+       "      <th>max_date</th>\n",
+       "      <th>defaut</th>\n",
+       "      <th>Nbre_rejection_3M</th>\n",
+       "      <th>Somme_Reject</th>\n",
+       "      <th>Temps_écoulé</th>\n",
+       "      <th>Mont_tot_sur_3M</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>820688</th>\n",
+       "      <td>1964-2</td>\n",
+       "      <td>2023-05-18 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>146 days 23:00:00</td>\n",
+       "      <td>3072.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1434992</th>\n",
+       "      <td>2040-1</td>\n",
+       "      <td>2022-10-17 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>285 days 23:00:00</td>\n",
+       "      <td>134.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3407089</th>\n",
+       "      <td>2181-2</td>\n",
+       "      <td>2023-08-03 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>421.21</td>\n",
+       "      <td>25 days 00:00:00</td>\n",
+       "      <td>37.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81540</th>\n",
+       "      <td>2181-1</td>\n",
+       "      <td>2022-04-27 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>110.93</td>\n",
+       "      <td>22 days 00:00:00</td>\n",
+       "      <td>766.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547179</th>\n",
+       "      <td>2260-1</td>\n",
+       "      <td>2022-05-23 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>476.99</td>\n",
+       "      <td>5 days 00:00:00</td>\n",
+       "      <td>2174.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>867656</th>\n",
+       "      <td>49204-1</td>\n",
+       "      <td>2024-03-03 23:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>251 days 01:00:00</td>\n",
+       "      <td>-10607.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3356114</th>\n",
+       "      <td>49806-1</td>\n",
+       "      <td>2023-07-05 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>261 days 00:00:00</td>\n",
+       "      <td>-1546.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292297</th>\n",
+       "      <td>51935-1</td>\n",
+       "      <td>2023-08-08 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>238 days 23:00:00</td>\n",
+       "      <td>-0.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1063209</th>\n",
+       "      <td>56173-1</td>\n",
+       "      <td>2023-10-19 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>150 days 00:00:00</td>\n",
+       "      <td>13.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2228723</th>\n",
+       "      <td>56175-1</td>\n",
+       "      <td>2023-10-19 22:00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>150 days 00:00:00</td>\n",
+       "      <td>13.38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>118 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          new_id            max_date  defaut  Nbre_rejection_3M  Somme_Reject  \\\n",
+       "820688    1964-2 2023-05-18 22:00:00       1                  0          0.00   \n",
+       "1434992   2040-1 2022-10-17 22:00:00       1                  0          0.00   \n",
+       "3407089   2181-2 2023-08-03 22:00:00       1                  9        421.21   \n",
+       "81540     2181-1 2022-04-27 22:00:00       1                  5        110.93   \n",
+       "547179    2260-1 2022-05-23 22:00:00       1                  5        476.99   \n",
+       "...          ...                 ...     ...                ...           ...   \n",
+       "867656   49204-1 2024-03-03 23:00:00       1                  0          0.00   \n",
+       "3356114  49806-1 2023-07-05 22:00:00       1                  0          0.00   \n",
+       "292297   51935-1 2023-08-08 22:00:00       1                  0          0.00   \n",
+       "1063209  56173-1 2023-10-19 22:00:00       1                  0          0.00   \n",
+       "2228723  56175-1 2023-10-19 22:00:00       1                  0          0.00   \n",
+       "\n",
+       "             Temps_écoulé  Mont_tot_sur_3M  \n",
+       "820688  146 days 23:00:00          3072.20  \n",
+       "1434992 285 days 23:00:00           134.29  \n",
+       "3407089  25 days 00:00:00            37.10  \n",
+       "81540    22 days 00:00:00           766.51  \n",
+       "547179    5 days 00:00:00          2174.49  \n",
+       "...                   ...              ...  \n",
+       "867656  251 days 01:00:00        -10607.77  \n",
+       "3356114 261 days 00:00:00         -1546.27  \n",
+       "292297  238 days 23:00:00            -0.55  \n",
+       "1063209 150 days 00:00:00            13.38  \n",
+       "2228723 150 days 00:00:00            13.38  \n",
+       "\n",
+       "[118 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2360,7 +2587,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c2db38b-3452-4973-9bd1-795fd10ad236",
+   "id": "4fd653e2-8202-4080-8ea6-1a4878550709",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73f4c572-f4b3-4600-9589-598c8c0e4b4f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b73ff67d-b804-4355-9e70-b97a1146fe5a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "001240c3-5b58-42b2-bdb6-6bba5cadc095",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4773ec9e-5c89-41e9-b760-fbeafa0a3aac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2c1ee2b-b6b7-44f9-be8a-03e6fed51ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14f4d4e6-0a20-4cf6-a7be-45a4f14a64f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2376,7 +2651,9 @@
   {
    "cell_type": "markdown",
    "id": "4a7b2d59-7479-46e0-bc5f-f65dc36b40b0",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Test "
    ]
