--- a/CLEAN.ipynb
+++ b/CLEAN.ipynb
@@ -674,6 +674,160 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 137,
+   "id": "0bee7830-cdc2-4ed4-bac2-4f23627682a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_bank_account</th>\n",
+       "      <th>date</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>category_l1</th>\n",
+       "      <th>category_l2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4551</th>\n",
+       "      <td>6449</td>\n",
+       "      <td>2022-04-10 22:00:00</td>\n",
+       "      <td>-25.50</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10319</th>\n",
+       "      <td>25368</td>\n",
+       "      <td>2019-12-30 23:00:00</td>\n",
+       "      <td>-10.00</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12026</th>\n",
+       "      <td>12428</td>\n",
+       "      <td>2022-09-28 22:00:00</td>\n",
+       "      <td>-40.50</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27678</th>\n",
+       "      <td>2618</td>\n",
+       "      <td>2021-12-14 23:00:00</td>\n",
+       "      <td>-15.99</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33318</th>\n",
+       "      <td>15306</td>\n",
+       "      <td>2016-10-23 22:00:00</td>\n",
+       "      <td>-207.74</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3398713</th>\n",
+       "      <td>11607</td>\n",
+       "      <td>2022-09-18 22:00:00</td>\n",
+       "      <td>-97.22</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3399718</th>\n",
+       "      <td>2618</td>\n",
+       "      <td>2017-10-11 22:00:00</td>\n",
+       "      <td>-259.05</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3426908</th>\n",
+       "      <td>2618</td>\n",
+       "      <td>2017-10-19 22:00:00</td>\n",
+       "      <td>-36.00</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3454117</th>\n",
+       "      <td>2618</td>\n",
+       "      <td>2017-08-04 22:00:00</td>\n",
+       "      <td>-15.99</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3457706</th>\n",
+       "      <td>32307</td>\n",
+       "      <td>2021-11-15 23:00:00</td>\n",
+       "      <td>-36.00</td>\n",
+       "      <td>fraud</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>251 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id_bank_account                 date  amount category_l1 category_l2\n",
+       "4551                6449  2022-04-10 22:00:00  -25.50       fraud         NaN\n",
+       "10319              25368  2019-12-30 23:00:00  -10.00       fraud         NaN\n",
+       "12026              12428  2022-09-28 22:00:00  -40.50       fraud         NaN\n",
+       "27678               2618  2021-12-14 23:00:00  -15.99       fraud         NaN\n",
+       "33318              15306  2016-10-23 22:00:00 -207.74       fraud         NaN\n",
+       "...                  ...                  ...     ...         ...         ...\n",
+       "3398713            11607  2022-09-18 22:00:00  -97.22       fraud         NaN\n",
+       "3399718             2618  2017-10-11 22:00:00 -259.05       fraud         NaN\n",
+       "3426908             2618  2017-10-19 22:00:00  -36.00       fraud         NaN\n",
+       "3454117             2618  2017-08-04 22:00:00  -15.99       fraud         NaN\n",
+       "3457706            32307  2021-11-15 23:00:00  -36.00       fraud         NaN\n",
+       "\n",
+       "[251 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trans.groupb y[trans['category_l1']==\"fraud\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "id": "e948f572-1827-4e8f-8ca0-9df0f625348d",
    "metadata": {},
@@ -2586,11 +2740,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "4fd653e2-8202-4080-8ea6-1a4878550709",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transaction[transaction[\"category_l2\"]==\"rejectionFees\"][\"amount\"].max()"
+   ]
   },
   {
    "cell_type": "code",
